Add styles for desktop view

--- a/index.html
+++ b/index.html
@@ -28,43 +28,43 @@
         <h2 class="chart-title">Spending - Last 7 days</h2>
         <div class="grid">
           <div class="bar-wrapper">
-            <div class="bar"></div>
+            <div class="bar"><span class="tooltip"></span></div>
             <h3 class="label">
               mon<span class="visually-hidden expense-amt"></span>
             </h3>
           </div>
           <div class="bar-wrapper">
-            <div class="bar"></div>
+            <div class="bar"><span class="tooltip"></span></div>
             <h3 class="label">
               tue<span class="visually-hidden expense-amt"></span>
             </h3>
           </div>
           <div class="bar-wrapper">
-            <div class="bar current-day"></div>
+            <div class="bar current-day"><span class="tooltip"></span></div>
             <h3 class="label">
               wed<span class="visually-hidden expense-amt"></span>
             </h3>
           </div>
           <div class="bar-wrapper">
-            <div class="bar"></div>
+            <div class="bar"><span class="tooltip"></span></div>
             <h3 class="label">
               thu<span class="visually-hidden expense-amt"></span>
             </h3>
           </div>
           <div class="bar-wrapper">
-            <div class="bar"></div>
+            <div class="bar"><span class="tooltip"></span></div>
             <h3 class="label">
               fri<span class="visually-hidden expense-amt"></span>
             </h3>
           </div>
           <div class="bar-wrapper">
-            <div class="bar"></div>
+            <div class="bar"><span class="tooltip"></span></div>
             <h3 class="label">
               sat<span class="visually-hidden expense-amt"></span>
             </h3>
           </div>
           <div class="bar-wrapper">
-            <div class="bar"></div>
+            <div class="bar"><span class="tooltip"></span></div>
             <h3 class="label">
               sun<span class="visually-hidden expense-amt"></span>
             </h3>
