Make adjustments to style and highlight actual current day

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </h3>
           </div>
           <div class="bar-wrapper">
-            <div class="bar current-day"><span class="tooltip"></span></div>
+            <div class="bar"><span class="tooltip"></span></div>
             <h3 class="label">
               wed<span class="visually-hidden expense-amt"></span>
             </h3>
